[package]
name = "tcpudp5"
version = "0.1.0"
authors = ["DESKTOP-07JB8LJ\\ksoo <hsnks100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
futures = "*"
bytes = "*"
anyhow = "*"
pin-project = "*"
async-trait = "0.1.51"
