[package]
name = "tcpws1"
version = "0.1.0"
authors = ["DESKTOP-07JB8LJ\\ksoo <hsnks100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
futures = "0.3.1"

futures-channel = "*"
bytes = "*"
anyhow = "*"
pin-project = "*"
async-trait = "0.1.51"
num = "*"
async-tungstenite = "*"
websocket = "0.24.0"
url = "2.0.0"
env_logger = "0.9"
log = "*"
info = "*"
futures-util = "*"
task = "*"